# A-Course-Design-of-Campus-Second-hand-Trading-Platform-with-C-S-Architecture-Based-on-Qt

./: .gitignore  CLAUDE.md  CMakeLists.txt  chatbubble.cpp  chatbubble.h  chatclient.cpp  chatclient.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatlistpage.cpp  chatlistpage.h  chatlistpage.ui  chatserver.cpp  chatserver.h  config.h  dbmanager.cpp  dbmanager.h  editprofiledialog.cpp  editprofiledialog.h  editprofiledialog.ui  experiment1_xor.cpp  experiment2_reflection.cpp  experiment3_perspective.cpp  filter.cpp  filter.h  followersdialog.cpp  followersdialog.h  followersdialog.ui  forgotpassworddialog.cpp  forgotpassworddialog.h  forgotpassworddialog.ui  generate_ppt.py  homepage.cpp  homepage.h  homepage.ui  logwindow.cpp  logwindow.h  logwindow.ui  main.cpp  (+41 more)
.claude/: settings.local.json
.qtcreator/: CMakeLists.txt.user.3578f8f  CMakeLists.txt.user.62ee71c  CMakeLists.txt.user.80739d0  CMakeLists.txt.user.86b0b7b  CMakeLists.txt.user.b941eda
